--- a/style.css
+++ b/style.css
@@ -5,24 +5,28 @@ html, body {
 	width: 100%;
 	height: 100%;
 	padding: 0;
-	width: 100%;
 }
 
 * {
 	font-family: 'Rubik', sans-serif;
 	font-size: 18px;
+	transition: 0.2s;
 }
+
+button { all: unset; }
+
+button:hover { cursor: pointer; }
 
 /* Colors */
 :root {
 	/* Primary */
 	--blue: hsl(246, 80%, 60%);
-	--light-red (work): hsl(15, 100%, 70%);
-	--soft-blue (play): hsl(195, 74%, 62%);
-	--light-red (study): hsl(348, 100%, 68%);
-	--lime-green (exercise): hsl(145, 58%, 55%);
-	--violet (social): hsl(264, 64%, 52%);
-	--soft-orange (self care): hsl(43, 84%, 65%);
+	--light-red: hsl(15, 100%, 70%);
+	--soft-blue: hsl(195, 74%, 62%);
+	--light-red1: hsl(348, 100%, 68%);
+	--lime-green: hsl(145, 58%, 55%);
+	--violet: hsl(264, 64%, 52%);
+	--soft-orange: hsl(43, 84%, 65%);
 	/* Neutral */
 	--very-dark-blue: hsl(226, 43%, 10%);
 	--dark-blue: hsl(235, 46%, 20%);
@@ -37,56 +41,162 @@ body {
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
+	min-width: 100vw;
+	min-height: 100vh;
 }
 
+body * { font-size: 18px; }
+
 .dashboard {
-	width: 80%;
-	height: 70%;
 	display: grid;
-	grid-template-rows: repeat(2, minmax(0, 1fr));
-	grid-template-columns: repeat(7, minmax(0, 1fr));
-	background-color: gold;
-	box-sizing: border-box;
-	gap: 1%;
+	grid-template-rows: 1fr 1fr;
+	grid-template-columns: repeat(4, 1fr);
+	gap: 1vmax;
 }
 
 .card {
-	background-color: white;
 	border-radius: 15px;
-	width: calc(100%);
+	display: flex;
+	flex-direction: column;
+	justify-content: flex-end;
+	background-repeat: no-repeat;
+	background-size: 25%;
+	background-position:  90% -7%;
+}
+
+.card p {
+	color: var(--pale-blue);
+}
+
+.card-info {
+	background-color: var(--dark-blue);
+	border-radius: 10px;
+	height: 80%;
+	display: grid;
+	grid-template-rows: 20% 60% 1fr;
+	grid-template-columns: 1fr 30%;
+	padding: 10%;
+	box-sizing: border-box;
+}
+
+.card-category {
+	grid-row: 1;
+	grid-column: 1;
+	color: white;
+}
+
+.card-menu {
+	grid-row: 1;
+	grid-column: 2;
+	justify-self: flex-end;
+}
+
+.card-menu:hover { filter: brightness(1.4); }
+
+.hours {
+	grid-row: 2;
+	grid-column: 1;
+	color: white;
+	font-weight: 400;
+}
+
+.last-track {
+	grid-row: 3;
+	grid-column: 1;
 }
 
 #profile {
+	display: flex;
+	flex-direction: column;
 	grid-row: 1 / 3;
 	grid-column: 1;
+	background-color: var(--dark-blue);
+}
+
+#profile div:first-child {
+	background-color: var(--blue);
+	border-radius: inherit;
+	height: 65%;
+	padding: 10%;
+}
+
+#profile div:first-child > * { width: 100%; }
+
+#profile div:first-child picture img {
+	width: 30%;
+	border: 0.2vw solid white;
+	border-radius: 50%;
+}
+
+#profile div:first-child p {
+	margin-top: 15%;
+	margin-bottom: 0;
+}
+
+#profile div:first-child h3 {
+	font-size: 2em;
+	font-weight: 300;
+	margin-top: 0;
+	color: white;
+}
+
+#profile nav {
+	flex: 1;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	padding: 10%;
+}
+
+#profile nav label { color: var(--desaturated-blue); padding: 3% 0; }
+#profile nav label:hover {
+	color: white;
+	cursor: pointer;
+}
+
+#profile nav input[type=radio] {
+	-webkit-appearance: none;
 }
 
 #work {
 	grid-row: 1;
 	grid-column: 2;
+	background-color: var(--light-red);
+	background-image: url("images/icon-work.svg");
 }
 
 #play {
 	grid-row: 1;
 	grid-column: 3;
+	background-color: var(--soft-blue);
+	background-image: url("images/icon-play.svg");
 }
 
 #study {
 	grid-row: 1;
 	grid-column: 4;
+	background-color: var(--light-red1);
+	background-image: url("images/icon-study.svg");
 }
 
 #exercise {
 	grid-row: 2;
 	grid-column: 2;
+	background-color: var(--lime-green);
+	background-image: url("images/icon-exercise.svg");
+	background-position: 90% -1%;
 }
 
 #social {
 	grid-row: 2;
 	grid-column: 3;
+	background-color: var(--violet);
+	background-image: url("images/icon-social.svg");
 }
 
 #self-care {
 	grid-row: 2;
 	grid-column: 4;
+	background-color: var(--soft-orange);
+	background-image: url("images/icon-self-care.svg");
 }
