--- a/style.css
+++ b/style.css
@@ -200,3 +200,74 @@ body * { font-size: 18px; }
 	background-color: var(--soft-orange);
 	background-image: url("images/icon-self-care.svg");
 }
+
+/* Mobile settings */
+@media screen and (max-width: 1080px) {
+	.dashboard {
+		display: flex;
+		flex-direction: column;
+		width: 90%;
+		height: 90%;
+	}
+
+	.card {
+		margin: 3% 0;
+	}
+
+	#profile div:first-child {
+		display: grid;
+		grid-template-rows: 1fr 1fr;
+		grid-template-columns: 1fr 1fr;
+		height: 30%;
+	}
+
+	#profile > * {
+		height: 10vh !important;
+	}
+
+	#profile div:first-child picture {
+		grid-row: 1 / 3;
+		grid-column: 1;
+	}
+
+	#profile div:first-child h3 {
+		grid-row: 2;
+		grid-column: 2;
+		font-size: 1.1rem;
+	}
+
+	#profile div:first-child p {
+		grid-row: 1;
+		grid-column: 2;
+		font-size: 0.6rem;
+	}
+
+	#profile nav {
+		flex-direction: row;
+	}
+
+	.card-info {
+		grid-template-rows: 1fr 1fr;
+		grid-template-columns: 1fr 1fr;
+	}
+
+	.card-category {
+		grid-row: 1;
+		grid-column: 1;
+	}
+
+	.card-menu {
+		grid-row: 2;
+		grid-column: 2;
+	}
+
+	.hours {
+		grid-row: 2;
+		grid-column: 1;
+	}
+
+	.last-track {
+		grid-row: 2;
+		grid-column: 2;
+	}
+}
