--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ body * { font-size: 18px; }
 	grid-template-columns: repeat(4, 1fr);
 	gap: 2vw;
 	width: 70%;
-	height: 70%;
+	min-height: 70%;
 }
 
 .card {
