--- a/style.css
+++ b/style.css
@@ -218,3 +218,62 @@ body * { font-size: 18px; }
 	color: white;
 	cursor: pointer;
 }
+
+/* Mobile settings */
+@media screen and (max-width: 1080px) {
+	html, body {
+		height: auto;
+	}
+
+	.dashboard {
+		display: flex;
+		flex-direction: column;
+		width: 90%;
+		height: 100%;
+		justify-content: flex-start;
+		box-sizing: border-box;
+		margin: 10% 0;
+	}
+
+	.card {
+		margin: 2% 0;
+	}
+
+	.card-info {
+		margin-top: 15%;
+	}
+
+	#profile > div {
+		display: grid;
+		grid-template-rows: 1fr 1fr;
+		grid-template-columns: 40% 1fr;
+		height: 30%;
+		align-items: center;
+	}
+
+	#profile > div picture {
+		grid-row: 1 / 3;
+		grid-column: 1;
+	}
+
+	#profile > div p {
+		grid-row: 1;
+		grid-column: 2;
+		font-size: 1rem;
+		margin: 0;
+	}
+
+	#profile > div h3 {
+		grid-row: 2;
+		grid-column: 2;
+		font-size: 1.2rem;
+		margin: 0;
+	}
+
+	#profile > nav {
+		display: flex;
+		flex-direction: row;
+		justify-content: space-between;
+		align-items: center;
+	}
+}
